@@ -1,3 +1,9 @@
+2007-11-27  David Smith  <dsmith@redhat.com>
+
+	PR 5377.
+	* elaborate.cxx (match_node::find_and_build): Handle wildcards in
+	probe points correctly.
+
 2007-11-26  Frank Ch. Eigler  <fche@elastic.org>
 
 	* elaborate.cxx (derived_probe ctor): Don't duplicate condition
